# SRWToolkit

./: LICENSE  README.md  compose.yml
backend/: Dockerfile  Makefile  dev.env  pyproject.toml
backend/api/: __main__.py  app.py  config.py  mongodb.py
backend/api/ai/: pipeline.py  prompts.py
backend/api/crud/: activity_crud.py  chat_crud.py  communication_crud.py  prompt_crud.py
backend/api/models/: activity.py  chat.py  communication.py  prompt.py
backend/api/routers/: communication.py  prompt.py  socket.py
backend/api/utils/: __init__.py  audio.py  types.py
frontend/bot/: .gitignore  .prettierrc  Dockerfile  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/bot/public/: index.html
frontend/bot/src/: App.tsx  index.html  index.tsx
frontend/bot/src/apis/: index.ts
frontend/bot/src/components/: Avatar.tsx  Layout.tsx
frontend/bot/src/configs/: skins.ts
frontend/bot/src/store/: index.ts
frontend/bot/src/styles/: _animations.scss  _app.scss  _avatar.scss  _layout.scss  _ui.scss  _vars.scss  global.scss
frontend/bot/src/utils/: index.ts
frontend/controlpanel/: .dockerignore  .env  Dockerfile  eslint.config.mjs  package.json
frontend/controlpanel/public/: index.html
frontend/controlpanel/src/: App.tsx  index.css  index.tsx
frontend/controlpanel/src/apis/: communication.ts  index.ts
frontend/controlpanel/src/components/: ControlPanel.tsx  Layout.tsx
frontend/controlpanel/src/store/: index.ts
frontend/controlpanel/src/styles/: _app.scss  _controlpanel.scss  _layout.scss  _vars.scss  global.scss
(+9 files in other folders)
